--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,37 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import GradientHorizontalBar from "~/components/Layout/GradientHorizontalBar.astro";
+import HomeHeader from "~/components/Layout/HomeHeader.astro";
+import Layout from "../layouts/Layout.astro";
+import { getGames } from "../lib/getGames";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const games = [
+	...getGames(),
+	...getGames(),
+	...getGames(),
+	...getGames(),
+	...getGames(),
+	...getGames(),
+	...getGames(),
+];
 ---
 
 <Layout>
-	<Welcome />
+	<HomeHeader />
+	<div class="sticky top-[80px] md:top-[150px] z-10">
+		<GradientHorizontalBar />
+	</div>
+	<ul class="pt-8 gap-8 flex flex-col divide-y divide-primary-700/50">
+		{
+			games.map((game) => (
+				<li class="">
+					<a href={`/games/${game.id}`}>
+						<div class="px-8 pb-8">
+							<h2 class="text-2xl font-bold mb-2">{game.data.title}</h2>
+							<p class="text-gray-700">{game.data.description}</p>
+						</div>
+					</a>
+				</li>
+			))
+		}
+	</ul>
 </Layout>
