Refactor Table of Contents component and improve styling
- Updated the Toc.astro component to enhance the appearance of list items based on heading depth.
- Modified content.config.ts to include additional tags for games.
- Removed the outdated 'cuadrado.mdx' game file.
- Enhanced the layout in MdLayout.astro for better navigation and spacing.
- Improved game detail page layout and description styling in [...slug].astro.
- Updated global styles to include typography plugin and custom variants.
- Added new Spanish version of the 'cuadrado' game with comprehensive rules and instructions.
- Introduced a new prose.css file for better text styling across the application.

--- a/src/layouts/MdLayout.astro
+++ b/src/layouts/MdLayout.astro
@@ -76,14 +76,24 @@ const { headings, backTo } = Astro.props;
     </div>
   )
 }
-<div class="flex items-start gap-x-6">
+<div class="flex flex-col gap-4 px-8">
+  <nav class="flex items-center justify-between">
+    <a
+      title="Return Back"
+      href={"/"}
+      href-lang="en-us"
+      class="text-primary-800 hover:text-primary-700 cursor-pointer"
+    >
+      ← Back
+    </a>
+  </nav>
   <article
-    class="prose prose-quoteless prose-neutral dark:prose-invert w-full max-md:prose-sm p-4"
+    class="prose prose-quoteless prose-neutral dark:prose-invert w-full max-md:prose-sm"
   >
     <slot />
   </article>
 </div>
-<nav class="flex items-center justify-between mt-8 px-4">
+<nav class="flex pb-20 items-center justify-between mt-8 px-4">
   <a
     title="Return Back"
     href={backTo ?? "/"}
