--- a/src/components/Toc.astro
+++ b/src/components/Toc.astro
@@ -14,19 +14,18 @@ const { headings } = Astro.props;
     <ul class="text-sm">
       {
         headings.map(({ depth, slug, text }) => (
-          <li class="hover:text-primary-800 dark:hover:text-primary-700 line-clamp-1">
+          <li class="hover:text-primary-800 line-clamp-1">
             <a
               href={`#${slug}`}
               aria-label={`Scroll to section: ${text}`}
               class:list={[
                 "block",
-                { "mt-2 opacity-90": depth <= 2 },
-                { "mt-1 pl-3 text-xs opacity-80": depth > 2 },
+                { "mt-2 opacity-95": depth <= 2 },
+                { "mt-1 pl-3 text-xs opacity-90": depth > 2 },
               ]}
             >
               {text}
               <span class="sr-only">Scroll to section: {text}</span>
-              {/* <span>{"#".repeat(depth)}</span>*/}
             </a>
           </li>
         ))
