--- a/src/pages/games/[...slug].astro
+++ b/src/pages/games/[...slug].astro
@@ -24,11 +24,14 @@ const { Content, headings } = await render(game);
 <Layout title={PAGE_TITLE}>
   <section class="relative flex flex-col gap-4 min-h-dvh" id="game-hero">
     <header class="px-8 pt-8 pb-4 flex flex-col gap-2">
+      
       <p class="text-sm text-gray-500">
         {formatDate(game.data.addedAt)}
       </p>
       <h1 class="text-3xl md:text-6xl font-bold">{game.data.title}</h1>
-      <p class="text-sm text-gray-500">{game.data.description}</p>
+      <p class="text-sm max-w-lg text-balance text-gray-500">
+        {game.data.description}
+      </p>
     </header>
     <GradientHorizontalBar />
     <MdLayout headings={headings} backTo="/">
