--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
+@import "./prose.css";
 
-
+@custom-variant dark (&:where(.dark, .dark *));
 @theme {
   --color-primary-50: #ffffec;
   --color-primary-100: #ffffc5;
