--- a/src/components/Layout/HomeHeader.astro
+++ b/src/components/Layout/HomeHeader.astro
@@ -8,7 +8,7 @@ import HeaderIcons from "./HeaderIcons.astro";
 >
   <h1 class="font-black sm:line-clamp-1">¿Cómo se jugaba?</h1>
   <p class="text-[50%] line-clamp-1 max-sm:hidden">
-    Set of card games with standardized rules
+    Juegos de cartas para todos los gustos
   </p>
 </header>
 <style>
