--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,12 +12,12 @@ const games = getGames();
 	<div class="sticky top-[80px] md:top-[150px] z-10">
 		<GradientHorizontalBar />
 	</div>
-	<ul class="pt-8 gap-8 flex flex-col divide-y min-h-dvh divide-primary-700/50">
+	<ul class="py-8 flex flex-col divide-y min-h-dvh divide-primary-700/50">
 		{
 			games.map((game) => (
-				<li class="">
+				<li>
 					<a href={`/games/${game.id}`}>
-						<div class="px-8 pb-8">
+						<div class="px-8 py-8 hover:bg-primary/20 transition-all">
 							<h2 class="text-2xl font-bold mb-2">{game.data.title}</h2>
 							<p class="text-gray-700">{game.data.description}</p>
 						</div>
