--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const {
   title = metadata.title,
   description = metadata.description,
-  image = "/thumbnail.png",
+  image = "/thumbnail.webp",
 } = Astro.props;
 ---
 
